--- a/frontend-backend/package.json
+++ b/frontend-backend/package.json
@@ -4,10 +4,14 @@
     "description": "Server for the web forms assignment",
     "main": "server.js",
     "scripts": {
-        "start": "node server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "dependencies": {
         "express": "^4.18.2",
         "mariadb": "^3.0.2"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.20"
     }
 }
